# MiracastReceiver

./: .gitignore  AirPlay连接问题诊断.md  Android开发环境配置.md  LICENSE  README.md  Windows无线显示器支持说明.md  iOS屏幕镜像支持说明.md  setup-android-env.bat  安卓电视投屏工具开发计划.md  开发与调试指南.md  开发进度.md  快速开始.md  项目总结.md
.claude/: settings.local.json
MiracastReceiver/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
MiracastReceiver/app/: build.gradle.kts  proguard-rules.pro
MiracastReceiver/app/src/main/: AndroidManifest.xml
MiracastReceiver/app/src/main/cpp/: CMakeLists.txt  alac_jni.cpp  fairplay_jni.c
MiracastReceiver/app/src/main/cpp/alac/: EndianPortable.c
MiracastReceiver/app/src/main/cpp/playfair/: modified_md5.c  sap_hash.c
MiracastReceiver/app/src/main/java/com/weekd/miracastreceiver/: MiracastApp.kt
MiracastReceiver/app/src/main/java/com/weekd/miracastreceiver/airplay/: AirPlayAudioReceiver.kt  AirPlayMirroringReceiver.kt  AirPlayReceiver.kt  AirPlayServer.kt  AirPlayState.kt  AirPlayVideoPlayer.kt  AudioPlayer.kt  DacpClient.kt  MdnsService.kt  NowPlayingInfo.kt  PhotoHandler.kt  RtpInterleaved.kt  RtspHandler.kt  RtspMessages.kt  RtspRequestReader.kt  SdpParser.kt  StreamStats.kt  TimingHandler.kt  VideoDecoder.kt
MiracastReceiver/app/src/main/res/drawable/: ic_launcher_foreground.xml
MiracastReceiver/app/src/main/res/layout/: activity_connect.xml  activity_main.xml  activity_player.xml  custom_player_control.xml
MiracastReceiver/app/src/main/res/values/: colors.xml  strings.xml  styles.xml
releases/v1.1.1/: 升级说明.md
(+37 files in other folders)
